--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mijn Webchat Pagina</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f0f0f0;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
 <body>
-    <!-- Hier komt je pagina-inhoud -->
-    <h1>Welkom op mijn website</h1>
-    
+    <div class="content">
+        <h1>Welkom op mijn website</h1>
+        <p>Dit is een testpagina voor de webchat integratie.</p>
+        <p>De webchat zou rechtsonder in beeld moeten verschijnen.</p>
+    </div>
+
     <!-- Webchat script -->
     <script type="module" crossorigin="anonymous" src='https://webchat.digitalcx.com/inline.js' 
     onload="cmwc.add('42772b59-b2d5-47c7-8f0a-42b57a809a6d').install();"></script>
