--- a/index.html
+++ b/index.html
@@ -3,68 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webchat Test Pagina</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        #chat-container {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 9999;
-        }
-    </style>
+    <title>Chat Input met Virtueel Toetsenbord</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content">
-        <h1>Welkom op mijn website</h1>
-        <p>Dit is een testpagina voor de webchat integratie.</p>
-        <p>De webchat zou rechtsonder in beeld moeten verschijnen.</p>
+    <div class="chat-input-container">
+        <div class="input-wrapper">
+            <textarea id="chat-input" placeholder="Stuur een bericht"></textarea>
+            <button class="keyboard-toggle" id="keyboardToggle">
+                <svg width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M20,5H4C2.9,5,2,5.9,2,7v10c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V7C22,5.9,21.1,5,20,5z M11,8h2v2h-2V8z M11,11h2v2h-2V11z M8,8h2v2H8V8z M8,11h2v2H8V11z M5,11h2v2H5V11z M5,8h2v2H5V8z M8,14h8v2H8V14z M14,11h2v2h-2V11z M14,8h2v2h-2V8z M17,11h2v2h-2V11z M17,8h2v2h-2V8z"/>
+                </svg>
+            </button>
+        </div>
+        <div class="virtual-keyboard" id="keyboard" style="display: none;">
+        </div>
     </div>
-
-    <div id="chat-container"></div>
-
-    <!-- Webchat script met verschillende initialisatie opties -->
-    <script type="module" crossorigin="anonymous" src='https://webchat.digitalcx.com/inline.js'></script>
-    <script>
-        // Optie 1: Basis initialisatie
-        document.addEventListener('DOMContentLoaded', function() {
-            cmwc.add('42772b59-b2d5-47c7-8f8a-42b57a889a6d').install({
-                container: '#chat-container'
-            });
-        });
-
-        // Optie 2: Met vertraging (uncomment om te testen)
-        /*
-        document.addEventListener('DOMContentLoaded', function() {
-            setTimeout(() => {
-                cmwc.add('42772b59-b2d5-47c7-8f8a-42b57a889a6d').install({
-                    container: '#chat-container'
-                });
-            }, 1000);
-        });
-        */
-
-        // Optie 3: Window onload (uncomment om te testen)
-        /*
-        window.onload = function() {
-            cmwc.add('42772b59-b2d5-47c7-8f8a-42b57a889a6d').install({
-                container: '#chat-container'
-            });
-        }
-        */
-    </script>
+    <script src="keyboard.js"></script>
 </body>
 </html>
