--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="chat-input-container">
+        <div class="messages-container" id="messages">
+            <!-- Berichten komen hier -->
+        </div>
         <div class="input-wrapper">
             <textarea id="chat-input" placeholder="Stuur een bericht"></textarea>
             <button class="keyboard-toggle" id="keyboardToggle">
